# autoskola_eTesty_desktop

./: .gitignore  README.md
autoskola_eTesty/: CMakeLists.txt  clickablelabel.cpp  clickablelabel.h  clickabletextedit.cpp  clickabletextedit.h  main.cpp  questionsdialog.cpp  questionsdialog.h  questionsdialog.ui  questionswindow.cpp  questionswindow.h  questionswindow.ui  resources.qrc  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  startmenu.cpp  startmenu.h  startmenu.ui  ui_questionsdialog.h  ui_questionswindow.h  ui_settingsdialog.h  ui_startmenu.h
autoskola_eTesty/icons/: appicon.rc
